Add calculator history feature and enhance theme handling; update styles and package dependencies

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
                                 <div id="m1-value" class="display-6">-</div>
                             </div>
                         </div>
+
+                        <div class="calculator">
+                            <input type="text" class="display" aria-label="Calculator display" readonly>
+                            <!-- Existing calculator buttons -->
+                            <div class="history-panel" aria-label="Calculation history"></div>
+                        </div>
                     </div>
                 </div>
             </div>
