--- a/index.html
+++ b/index.html
@@ -48,6 +48,27 @@
                                 <label for="reserve-ratio" class="form-label">Reserve Ratio: <span id="ratio-value">10</span>%</label>
                                 <input type="range" class="form-range" id="reserve-ratio" min="1" max="50" value="10">
                             </div>
+                            
+                            <div class="mb-3">
+                                <label for="velocity-input" class="form-label">
+                                    Velocity of Money
+                                    <i class="bi bi-info-circle" data-bs-toggle="tooltip" 
+                                       title="How many times money changes hands in a year"></i>
+                                </label>
+                                <input type="number" class="form-control" id="velocity-input" 
+                                       value="1.5" min="0.1" step="0.1">
+                            </div>
+
+                            <div id="educational-tips" class="mt-3"></div>
+
+                            <div class="mt-3">
+                                <h6>Formulas Used:</h6>
+                                <ul class="small">
+                                    <li>Money Multiplier = 1 / (Reserve Ratio)</li>
+                                    <li>M1 = M0 × Money Multiplier</li>
+                                    <li>Economic Activity = M1 × Velocity</li>
+                                </ul>
+                            </div>
                         </div>
 
                         <div class="results mt-4">
@@ -81,7 +102,14 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
-    <script src="js/theme.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjs@11.8.0/lib/browser/math.js"></script>
+    <script type="module" src="script.js"></script>
+    <script type="module" src="js/theme.js"></script>
+    <script src="tests/browser-test.js"></script>
+    <script>
+        if (location.search.includes('test')) {
+            runBrowserTests().then(() => console.log('Tests complete'));
+        }
+    </script>
 </body>
 </html>
